--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,24 @@ license validity
 Rto circle
 license front
 license rear
+
+<div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav navbar-right">
+                    <!--<li> <a href="setting.php" > <span class="glyphicon glyphicon-user"></span> Setting</a></li>
+                    <li><a href="logout.php"> <span class="glyphicon glyphicon-log-out"></span> Logout</a></li>-->
+
+                    <li> <a href="{{ url_for('signup') }}"> <span class="glyphicon glyphicon-user"></span> Sign up</a></li>
+                    <li><a href="{{ url_for('login') }}"> <span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+
+                </ul>
+            </div>
+
+<a href="{{ url_for('signup') }}" style="text-decoration:none;"> {{ form.reg(style="color: white;", id="btn", class="btn btn-block") }} </a>
+
+
+
+<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
